--- a/app/src/main/res/layout/activity_forms.xml
+++ b/app/src/main/res/layout/activity_forms.xml
@@ -318,19 +318,36 @@
                 android:hint="e.g. Projector" />
         </com.google.android.material.textfield.TextInputLayout>
 
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/button"
-            android:layout_width="150dp"
-            android:layout_height="55dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
             android:layout_marginBottom="30dp"
-            android:backgroundTint="@color/gold"
-            android:onClick="btn_forms_submit"
-            android:text="Submit"
-            android:textSize="16sp"
-            app:cornerRadius="10dp"/>
+            android:layout_gravity="center_horizontal"
+            android:orientation="horizontal">
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button_back"
+                android:layout_width="150dp"
+                android:layout_height="55dp"
+                android:backgroundTint="@color/blue"
+                android:onClick="btn_forms_back"
+                android:text="Back"
+                android:textSize="16sp"
+                app:cornerRadius="10dp"/>
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/button"
+                android:layout_width="150dp"
+                android:layout_height="55dp"
+                android:layout_marginStart="10dp"
+                android:backgroundTint="@color/gold"
+                android:onClick="btn_forms_submit"
+                android:text="Submit"
+                android:textSize="16sp"
+                app:cornerRadius="10dp"/>
+        </LinearLayout>
+
+
     </LinearLayout>
 
 </ScrollView>
