--- a/app/src/main/res/layout/activity_admin_reservations.xml
+++ b/app/src/main/res/layout/activity_admin_reservations.xml
@@ -70,10 +70,11 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp">
 
                 <LinearLayout
-                    android:id="@+id/Reservation1"
+                    android:id="@+id/adminReservationCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
