--- a/app/src/main/res/layout/activity_reservation_details.xml
+++ b/app/src/main/res/layout/activity_reservation_details.xml
@@ -43,12 +43,12 @@
             app:cardBackgroundColor="#161f48">
 
             <TextView
-                android:id="@+id/reservation_details_ref_number"
+                android:id="@+id/disp_refnum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="90dp"
                 android:layout_marginTop="20dp"
-                android:text="LRDCDR-00001"
+                android:text="LRDCDR-000XX"
                 android:textColor="@color/white"
                 android:textSize="25sp"
                 android:textStyle="bold" />
@@ -94,7 +94,7 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
                         <TextView
@@ -109,13 +109,13 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/reservation_details_edittext_name"
-                            android:layout_width="wrap_content"
+                            android:id="@+id/disp_name"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="20dp"
                             android:ems="10"
-                            android:text="Artiaga, Angel Reign"
+                            android:text="XXX"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
                     </LinearLayout>
@@ -139,13 +139,13 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/reservation_details_edittext_usertype"
+                            android:id="@+id/disp_userType"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
                             android:ems="10"
-                            android:text="Student"
+                            android:text="XX"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
                     </LinearLayout>
@@ -157,24 +157,24 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/lbl_college"
+                            android:id="@+id/lbl_dept"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="20dp"
                             android:layout_marginTop="5dp"
-                            android:text="College:"
+                            android:text="Department/Program:"
                             android:textColor="@color/white"
                             android:textSize="17sp"
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/value_college"
+                            android:id="@+id/disp_dept"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
                             android:ems="10"
-                            android:text="SET"
+                            android:text="XXX"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
                     </LinearLayout>
@@ -197,13 +197,13 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/reservation_details_edittext_idnum"
+                            android:id="@+id/disp_idnum"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
                             android:ems="10"
-                            android:text="2023-132332"
+                            android:text="XXX"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
                     </LinearLayout>
@@ -227,13 +227,13 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/reservation_details_edittext_contactnum"
+                            android:id="@+id/disp_cnum"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
                             android:ems="10"
-                            android:text="09271129719"
+                            android:text="XXX"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
                     </LinearLayout>
@@ -257,14 +257,14 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/reservation_details_edittext_datereq"
+                            android:id="@+id/disp_reservation_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
                             android:layout_marginEnd="5dp"
                             android:ems="10"
-                            android:text="Wednesday, January 15"
+                            android:text="XXX"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
 
@@ -288,13 +288,13 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/reservation_details_edittext_purpose_activity"
+                            android:id="@+id/disp_purpose"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
                             android:ems="10"
-                            android:text="Group Meeting"
+                            android:text="XXX"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
 
@@ -318,13 +318,13 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/reservation_details_edittext_purpose_sched"
+                            android:id="@+id/disp_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
                             android:ems="10"
-                            android:text="Friday, January 17"
+                            android:text="XXX"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
 
@@ -337,13 +337,13 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/duration"
+                            android:id="@+id/disp_duration"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="100dp"
                             android:layout_marginTop="5dp"
                             android:ems="10"
-                            android:text="1:00PM to 5:00PM (4hrs)"
+                            android:text="stime to etime"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
                     </LinearLayout>
@@ -355,13 +355,13 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/rooms"
+                            android:id="@+id/disp_rooms"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="100dp"
                             android:layout_marginTop="5dp"
                             android:ems="10"
-                            android:text="Room No. 2 (1 Room)"
+                            android:text="Discussion Room 1, 2, 3"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
                     </LinearLayout>
@@ -384,13 +384,13 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/reservation_details_edittext_num_of_tables"
+                            android:id="@+id/disp_table"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
                             android:ems="10"
-                            android:text="1"
+                            android:text="X"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
 
@@ -400,7 +400,6 @@
                         android:layout_width="315dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="5dp"
-                        android:layout_marginBottom="10dp"
                         android:orientation="horizontal">
 
                         <TextView
@@ -416,13 +415,43 @@
                             android:textStyle="bold" />
 
                         <TextView
-                            android:id="@+id/reservation_details_edittext_num_of_chairs"
+                            android:id="@+id/disp_chair"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="5dp"
                             android:layout_marginTop="5dp"
                             android:ems="10"
-                            android:text="6"
+                            android:text="X"
+                            android:textColor="@color/white"
+                            android:textSize="17sp" />
+
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="315dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="10dp"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/reservation_details_other"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="20dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginBottom="5dp"
+                            android:text="Other Materials:"
+                            android:textColor="@color/white"
+                            android:textSize="17sp"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/disp_other"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="5dp"
+                            android:ems="10"
+                            android:text="XXX"
                             android:textColor="@color/white"
                             android:textSize="17sp" />
 
