--- a/app/src/main/res/layout/activity_admin_reservation_history.xml
+++ b/app/src/main/res/layout/activity_admin_reservation_history.xml
@@ -17,6 +17,7 @@
             android:layout_width="390dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginTop="30dp"
             android:orientation="horizontal">
 
             <Button
@@ -24,7 +25,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="60dp"
-                android:layout_marginTop="45dp"
                 android:layout_weight="1"
                 android:backgroundTint="#d8e1e8"
                 android:fontFamily="sans-serif-medium"
@@ -40,7 +40,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="-20dp"
-                android:layout_marginTop="45dp"
                 android:layout_marginRight="60dp"
                 android:layout_weight="1"
                 android:backgroundTint="#161f48"
@@ -74,51 +73,13 @@
                 android:layout_height="wrap_content">
 
                 <LinearLayout
-                    android:id="@+id/Reservation1"
+                    android:id="@+id/adminReservationHistoryCard"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
                     android:layout_marginEnd="20dp"
                     android:orientation="vertical">
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:layout_marginTop="15dp"
-                        app:cardBackgroundColor="#12264D"
-                        app:cardCornerRadius="8dp">
-
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                            <TextView
-                                android:id="@+id/textView4"
-                                android:layout_width="0dp"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_vertical"
-                                android:layout_marginStart="10dp"
-                                android:layout_weight="1"
-                                android:fontFamily="sans-serif-medium"
-                                android:text="Reference Number: LRCDR-00001"
-                                android:textColor="@color/white"
-                                android:textSize="16sp" />
-
-                            <ImageView
-                                android:id="@+id/imageView"
-                                android:layout_width="45dp"
-                                android:layout_height="45dp"
-                                android:layout_gravity="center"
-                                android:background="@drawable/button_background"
-                                android:onClick="H1"
-                                android:padding="8dp"
-                                android:scaleType="centerCrop"
-                                app:srcCompat="@drawable/arrow"
-                                app:tint="@color/white" />
-
-                        </LinearLayout>
-                    </androidx.cardview.widget.CardView>
                 </LinearLayout>
             </ScrollView>
         </LinearLayout>
