--- a/app/src/main/res/layout/activity_admin_update_status.xml
+++ b/app/src/main/res/layout/activity_admin_update_status.xml
@@ -46,7 +46,7 @@
                 android:id="@+id/disp_refnum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="90dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:text="LRDCDRR-000XX"
                 android:textColor="@color/white"
