--- a/app/src/main/res/layout/activity_admin_reservation_history.xml
+++ b/app/src/main/res/layout/activity_admin_reservation_history.xml
@@ -70,7 +70,8 @@
 
             <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp">
 
                 <LinearLayout
                     android:id="@+id/adminReservationHistoryCard"
