--- a/app/src/main/res/layout/activity_reservations_history.xml
+++ b/app/src/main/res/layout/activity_reservations_history.xml
@@ -5,13 +5,14 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#e4e4e4"
-    tools:context=".users.ReservationsActivity">
+    android:background="@color/bg_white"
+    tools:context=".admin.AdminReservationHistoryActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="390dp"
             android:layout_height="wrap_content"
@@ -25,12 +26,14 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="60dp"
                 android:layout_weight="1"
-                android:backgroundTint="#161f48"
+                android:backgroundTint="#d8e1e8"
                 android:fontFamily="sans-serif-medium"
                 android:text="Upcoming"
                 android:textAlignment="center"
                 android:textSize="16dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:onClick="Upcoming"/>
 
             <Button
                 android:id="@+id/button2"
@@ -39,40 +42,48 @@
                 android:layout_marginLeft="-20dp"
                 android:layout_marginRight="60dp"
                 android:layout_weight="1"
-                android:backgroundTint="#d8e1e8"
+                android:backgroundTint="#161f48"
                 android:fontFamily="sans-serif-medium"
-                android:onClick="History"
                 android:text="History"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="16dp"
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/textView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="20dp"
-            android:fontFamily="sans-serif-medium"
-            android:text="Your Upcoming Reservations"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="italic" />
 
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/ReservationCard"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
-                android:layout_marginEnd="20dp"
-                android:orientation="vertical">
+                android:layout_marginTop="20dp"
+                android:fontFamily="sans-serif-medium"
+                android:text="Your Reservations History"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                android:textStyle="italic" />
 
-            </LinearLayout>
-        </ScrollView>
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp">
+
+                <LinearLayout
+                    android:id="@+id/reservationsHistoryCard"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:orientation="vertical">
+
+                </LinearLayout>
+            </ScrollView>
+        </LinearLayout>
     </LinearLayout>
+
 </FrameLayout>
