--- a/app/src/main/res/layout/activity_admin_history_details.xml
+++ b/app/src/main/res/layout/activity_admin_history_details.xml
@@ -8,15 +8,21 @@
     android:background="@color/bg_white"
     tools:context=".admin.AdminHistoryDetails">
 
-    <LinearLayout
-        android:id="@+id/content_layout"
+    <ScrollView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/btn_next"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:fillViewport="true">
+
+    <LinearLayout
+        android:id="@+id/content_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingBottom="16dp">
 
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
@@ -497,6 +503,7 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
+    </ScrollView>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btn_next"
@@ -511,5 +518,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
