--- a/app/src/main/res/layout/activity_admin_reservation_history.xml
+++ b/app/src/main/res/layout/activity_admin_reservation_history.xml
@@ -56,17 +56,50 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:orientation="horizontal"
                 android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:fontFamily="sans-serif-medium"
-                android:text="Reservation History"
-                android:textColor="@color/black"
-                android:textSize="20dp"
-                android:textStyle="italic" />
+                android:layout_marginEnd="20dp"
+                android:layout_marginTop="20dp">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Reservation History"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    android:textStyle="italic"
+                    android:fontFamily="sans-serif-medium"/>
+
+                <LinearLayout
+                    android:id="@+id/filterContainer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:clickable="true"
+                    android:focusable="true">
+
+                    <TextView
+                        android:id="@+id/filterLink"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Filter"
+                        android:textColor="@color/blue"
+                        android:textSize="16dp"
+                        android:layout_marginEnd="4dp"/>
+
+                    <ImageView
+                        android:id="@+id/filterIcon"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:src="@drawable/filter_icon"
+                        app:tint="@color/blue"/>
+                </LinearLayout>
+            </LinearLayout>
 
             <ScrollView
                 android:layout_width="match_parent"
